AO3-7213 Adjust styling to ensure 'Suggest a Language' button is clickable on narrow screens (#5520)
* AO3-7213 - Adjust styling to ensure 'Suggest a Language' button is clickable on narrow screens

* AO3-7213 - reorganise to match house style

--- a/public/stylesheets/site/2.0/10-types-groups.css
+++ b/public/stylesheets/site/2.0/10-types-groups.css
@@ -240,6 +240,10 @@ p.qr svg {
   margin: auto;
 }
 
+dl.language {
+  clear: right;
+}
+
 dl.stats {
   text-align: right;
   background: none;
